[tool.poetry]
name = "lightningtenna"
version = "0.2.0"
description = ""
authors = ["willcl-ark <will8clark@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
simplejson = "3.16.0"
trio = "0.12.1"
wheel = "^0.33.6"
docopt = "^0.6.2"
pylightning = "^0.0.7"
blocksat_api = "^1.0.0"
sqlalchemy = "^1.3.8"
termcolor = "^1.1.0"

[tool.poetry.dev-dependencies]
pytest = "^3.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
